# orbiter-launcher

./: .gitignore  Dockerfile  Makefile  README.md  invoke.yaml  notebooks  package-lock.json  package.json  pyproject.toml  tasks.py
base/: Dockerfile  alpine.pkg  requirements.txt
base-devel/: Dockerfile  alpine-test.pkg  requirements-test.txt  requirements.txt
core/: Dockerfile  alpine.pkg
deploy/: Dockerfile  alpine.pkg  requirements.txt
devel/: Dockerfile  alpine.pkg  requirements-extra.txt  requirements.txt
full/: Dockerfile
full-devel/: Dockerfile  requirements.txt
